fix line spacing in form descriptions (in headers)

--- a/public/stylesheets/firehoze.less
+++ b/public/stylesheets/firehoze.less
@@ -2629,7 +2629,7 @@ div.tab-container div.panes div.fh-form ul.section li {
   font-size:12px;
   color:@dark-blue-20;
   margin-left:82px;
-  line-height:2em;
+  line-height:1.5em;
 }
 
 .key * { vertical-align: middle; }
